some issue fixed

--- a/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
+++ b/src/app/modules/authentication/components/create-nft-page/create-nft-page.component.html
@@ -12,7 +12,7 @@
               <form action="">
                   <div>
                       <label for="auth" class="form-label p-para">Authorization</label>
-                      <input type="text" class="form-control form-control-lg our-form-styles" placeholder="Authorization Key" value="af314eba-6c32-4d56-8503-a2984411d7be">
+                      <input type="text" class="form-control form-control-lg our-form-styles" placeholder="Authorization Key" [value]="apiKey">
                   </div>
                   <div class="pt-2">
                       <label for="mint" class="form-label p-para">Mint - to - address</label>
