--- a/src/app/modules/static/components/get-api-page/get-api-page.component.html
+++ b/src/app/modules/static/components/get-api-page/get-api-page.component.html
@@ -63,7 +63,7 @@
   </div>
 </div>
 <!-- Modal -->
-<div [ngClass]="isSubmitted ? 'modal fade show active-modal': 'modal fade'" id="myModal">
+<div [ngClass]="isSuccessResponse ? 'modal fade show active-modal': 'modal fade'" id="myModal">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content p-2 pl-5" style="border-radius: 20px">
       <!-- Modal Header -->
