--- a/src/app/modules/static/components/landing/landing.component.html
+++ b/src/app/modules/static/components/landing/landing.component.html
@@ -7,10 +7,10 @@
           <h1 class="text-uppercase hero-heading">shyft</h1>
           <h3 class="hero-sub-heading">APIs to make NFTs</h3>
           <div class="mt-5 pb-5">
-            <a href="/get-api-key"><button class="btn-solid-reg">Try Shift for Free</button></a>
+            <a routerLink="/get-api-key"><button class="btn-solid-reg">Try Shift for Free</button></a>
             <p class="p-para-normal">
               If you already have an API key,
-              <a href="/access-to-nft"><b>click here</b></a> to continue
+              <a routerLink="/access-to-nft"><b>click here</b></a> to continue
             </p>
           </div>
         </div>
