--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -6,7 +6,7 @@
 <nav class="navbar navbar-expand fixed-top our-navbar">
   <div class="container-fluid">
     <!-- Navbar brand -->
-    <a class="navbar-brand me-2" href="#"> SHYFT </a>
+    <a class="navbar-brand me-2" routerLink="/"> SHYFT </a>
 
     <button
       class="navbar-toggler"
