--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -1,37 +1,43 @@
 <div class="container-fluid">
-  <div class="container">
-      <div class="row" style="padding: 120px 0px;">
-          <div class="col-sm-12 col-md-8">
-              <div class="footer-text-container">
-                  <div class="pt-4 pb-4">
-                      <h3 style="letter-spacing: 5px;">SHYFT</h3>
-                  </div>
-                  <div>
-                      <p class="p-para">
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum netus fames viverra facilisis. Vulputate sed lectus augue senectus et. Et ipsum congue senectus viverra semper lectus nisl.
-                      </p>
-                  </div>
-                  <div class="footer-link-container pt-5">
-                      <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policies</a>
-                  </div>
-                  
-              </div> 
-          </div>
-          <div class="col-sm-12 col-md-4">
-              <div  style="width: 100%; margin-top: 30px;">
-                  <div class="d-flex flex-row justify-content-end p-3">
-                      <div class="p-1"><a href="#"><img src="assets/images/Icons/twitter.png" alt=""></a></div>
-                      <div class="p-1"><a href="#"><img src="assets/images/Icons/instagram.png" alt=""></a></div>
-                      <div class="p-1"><a href="#"><img src="assets/images/Icons/discord.png" alt=""></a></div>
-                      <div class="p-1"><a href="#"><img src="assets/images/Icons/facebook.png" alt=""></a></div>
-                      <div class="p-1"><a href="#"><img src="assets/images/Icons/google.png" alt=""></a></div>
-                      <div class="p-1"><a href="#"><img src="assets/images/Icons/linkedin.png" alt=""></a></div>
-                  </div>
+    <div class="container footer-2">
+      <div class="row" style="padding: 30px 0px">
+        <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-start">
+          <div class="footer-text-container">
+            <div class="pt-3">
+              <h3 class="footer-logo">SHYFT</h3>
+            </div>
+            <div>
+              <div
+                class="text-center text-sm-center text-md-start pt-3"
+                style="width: 100%"
+              >
+                <span>
+                  <span class="footer-icons"
+                    ><a href="#"
+                      ><img src="assets/images/Icons/small-gmail.svg" alt="Gmail" /></a
+                  ></span>
+                  <span class="footer-icons"
+                    ><a href="#"
+                      ><img
+                        src="assets/images/Icons/small-twitter.svg"
+                        alt="Twitter" /></a
+                  ></span>
+                  <span class="footer-icons"
+                    ><a href="#"
+                      ><img
+                        src="assets/images/Icons/small-discord.svg"
+                        alt="Discord" /></a
+                  ></span>
+                </span>
               </div>
-              
+            </div>
           </div>
+        </div>
+        <div class="col-sm-12 col-md-6 text-center text-sm-center text-md-end">
+          <div class="footer-link-container pt-5">
+            <a href="#">Terms & Conditions</a> | <a href="#">Privacy Policies</a>
+          </div>
+        </div>
       </div>
-      
+    </div>
   </div>
-
-</div>
