--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -30,7 +30,7 @@
           id="side-panel"
           [ngStyle]="{
             display:
-              isDashboardUrl && isMenuActive && isAuthenticated
+              isDashboardUrl && isMenuActive
                 ? 'block'
                 : 'none'
           }"
