--- a/src/app/modules/authentication/components/read-nft-page/read-nft-page.component.html
+++ b/src/app/modules/authentication/components/read-nft-page/read-nft-page.component.html
@@ -17,14 +17,14 @@
           <div class="search-boxes">
             <form>
               <div class="row">
-                <div class="col-sm-8">
+                <div class="col-7 col-sm-8">
                   <input
                     class="transparent-inputs"
                     type="text"
                     placeholder="Enter token Id"
                   />
                 </div>
-                <div class="col-sm-4">
+                <div class="col-5 col-sm-4">
                   <button class="search-button" type="submit">Search</button>
                 </div>
               </div>
