--- a/src/app/modules/shared/components/side-nav/side-nav.component.html
+++ b/src/app/modules/shared/components/side-nav/side-nav.component.html
@@ -1,19 +1,19 @@
 <div
   id="mySidenav"
   class="sidenav"
-  [ngStyle]="{ width: isSidenavActive && isAuthenticated && isDashboardUrl ? '250px' : '0px' }"
+  [ngStyle]="{ width: isSidenavActive && isDashboardUrl ? '250px' : '0px' }"
 >
-  <div class="box-container">
+  <!-- <div class="box-container">
     <p class="headings">API Key</p>
     <p class="keys">af314eba-6c32-4d56-8503-a2984411d7be</p>
     <button class="copy-btn">Copy Token ID</button>
   </div>
-  <hr class="divider" />
+  <hr class="divider" /> -->
   <a
     href="javascript:void(0)"
     id="cls-button"
     class="closebtn"
-    [ngStyle]="{ display: isMenuActive && isAuthenticated ? 'block' : 'none' }"
+    [ngStyle]="{ display: isMenuActive ? 'block' : 'none' }"
     (click)="toggleSideNav()"
     >Dismiss</a
   >
